[REFACTOR] givenValidItemIdWhenFindAllByItemIdThenReturnsMatchingItems()
1. 한 외래키 아이디를 갖는 여러 객체를 저장한 시점에서도 원하는 결과를 얻을 수 있는지 테스트

2. 전반적인 문법 및 구조 개선